# Voxography

./: CMakeLists.txt  Makefile  README.md
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.c  matrix.c  matrix.h  util.c  util.h
